Added !important tag

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -140,7 +140,7 @@ body {
   }
 
   [class*="nonverbal"] .content--response-media {
-    max-height: 47.86859px;
+    max-height: 47.86859px !important;
   }
 }
 
