--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -74,12 +74,25 @@ body {
     color: var(--header-text-color);
 }
 
+  /* Hide the page counter located on the right corner */
+  .headerBigPanel #header--progress-panel {
+    display: none;
+  }
+
+/* Align the header elements */
+.mobileHeader {
+    display: flex;
+  }
+
 .content--response-media {
     align-self: auto;
 }
 
 #header { 
     background: transparent;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 16px;
 }
 
 .content--item-group-wrapper {
