Changed vp and stop sign to % based

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -164,10 +164,6 @@ body {
   [class*="nonverbal"] .content--response-media {
     max-height: 47.86859px !important;
   }
-
-  .video-player {
-    width: 660px;
-  }
 }
 
 .content--item-media {
@@ -189,9 +185,13 @@ body {
 
 
 #content > div > div > div > div > img {
-  width: 275px;
+  width: 75%;
 }
 
 .content--item-group-wrapper {
   gap: 0;
+}
+
+.video-container {
+  width: 80%;
 }
