--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -152,7 +152,8 @@ body {
   align-items: center;
   width: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  left: 0;
+  transform: translate(50%, -50%);
   position: absolute;
 }
 
