Updated comic strip CSSS patch

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -221,6 +221,6 @@ body {
   width: 65%;
 }
 
-#content > div > div > div > div > div:nth-child(1) > img {
+#content > div > div:nth-child(1) > img {
   width: 80%;
 }
