Updated preTasks page

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -20,7 +20,7 @@
   float: right;
 }
 
-.page-welcome\.1 #controls--next-button {
+.page-preTasks\.6 #controls--next-button {
   background-image: url("https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__beginarrow_right_1x.png")
 }
 
