--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -217,7 +217,7 @@ body {
   max-width: 800px;
 }
 
-#content > div > div:nth-child(1) > img {
+.page-instructions\.2\.0 > #content > div > div:nth-child(1) > img {
   max-width: 1200px;
   width: 100%;
 }
