--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -115,11 +115,11 @@ body {
   background-image: url("https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__itemarrow_right_selected_1x.png");
 }
 
-.page-welcome\.1 #controls--next-button:hover {
+.page-preTasks\.6 #controls--next-button:hover {
   background-image: url("https://cdn.mhs.com/mhscdndev/Gifted/Common/gifted__beginarrow_right_selected_1x.png");
 }
 
-.page-review\.7 #controls--next-button:hover {
+.page-review\.8 #controls--next-button:hover {
   background-image: url("https://cdn.mhs.com/mhsdocs/DataGathering/MDDG/submit-btn-selected.svg");
 }
 
