Add stop hand to end screen

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -165,6 +165,10 @@ body {
   transition: background 0.2s, opacity 0.2s, cursor 0.2s;
 }
 
+.page-ending\.10 > #content > div > div > div > div > div > img {
+  src: url(https://cdn.mhs.com/mhscdn/Gifted/Common/gifted__stophand_1x.png);
+}
+
 .button-chevron {
   display: none;
 }
