Adjust styling of ending stop hand

--- a/NGAT_MDDG_POC.css
+++ b/NGAT_MDDG_POC.css
@@ -166,7 +166,9 @@ body {
 }
 
 .page-ending\.10 > #content > div > div > div > div > div > img {
-  src: url(https://cdn.mhs.com/mhscdn/Gifted/Common/gifted__stophand_1x.png);
+  content: url("https://cdn.mhs.com/mhscdn/Gifted/Common/gifted__stophand_1x.png");
+  max-width: 50%;
+  margin-bottom: 0;
 }
 
 .button-chevron {
