Testing for sound check

--- a/SOUND_CHECK_POC.css
+++ b/SOUND_CHECK_POC.css
@@ -1,1 +1,11 @@
+video {
+    background: transparent;
+}
 
+.video-controls-container {
+    display: none;
+}
+
+.bi bi-play-circle-fill {
+    fill: black;
+}
