Changed "video" to "media"

--- a/SOUND_CHECK_POC.css
+++ b/SOUND_CHECK_POC.css
@@ -1,8 +1,8 @@
-.video-player {
+.media-player {
     background: transparent;
 }
 
-.video-controls-container {
+.media-controls-container {
     display: none;
 }
 
