--- a/SOUND_CHECK_POC.css
+++ b/SOUND_CHECK_POC.css
@@ -10,6 +10,8 @@
     background: url(https://mhsmatt.github.io/styles/images/pvat_soundcheck_btn.png) no-repeat center;
     background-size: cover;
     cursor: pointer;
+    height: 125px;
+    width: 125px;
 }
 
 .bi-play-circle-fill:hover {
